aggiunto bottone play sopra le canzoni

--- a/index.html
+++ b/index.html
@@ -90,6 +90,7 @@
                   <!-- qui al passaggio del cursore al centro della carta spunta un tasto play -->
                   <div class="img-wrapper">
                     <img src="/img/metal_lifting.jpg " alt="copertina brano" />
+                    <i class="fa-regular fa-circle-play centro"></i>
                   </div>
                   <div class="info">
                     <ul>
@@ -101,6 +102,7 @@
                 <div class="card">
                   <div class="img-wrapper">
                     <img src="/img/stranger.jpeg " alt="copertina brano" />
+                    <i class="fa-regular fa-circle-play centro"></i>
                   </div>
                   <div class="info">
                     <ul>
@@ -114,6 +116,7 @@
                 <div class="card">
                   <div class="img-wrapper">
                     <img src="/img/aquietplace.jpeg " alt="copertina brano" />
+                    <i class="fa-regular fa-circle-play centro"></i>
                   </div>
                   <div class="info">
                     <ul>
@@ -125,6 +128,7 @@
                 <div class="card">
                   <div class="img-wrapper">
                     <img src="/img/split.jpeg " alt="copertina brano" />
+                    <i class="fa-regular fa-circle-play centro"></i>
                   </div>
                   <div class="info">
                     <ul>
@@ -136,6 +140,7 @@
                 <div class="card">
                   <div class="img-wrapper">
                     <img src="/img/cure.jpeg " alt="copertina brano" />
+                    <i class="fa-regular fa-circle-play centro"></i>
                   </div>
                   <div class="info">
                     <ul>
@@ -147,6 +152,7 @@
                 <div class="card">
                   <div class="img-wrapper">
                     <img src="/img/sinister.jpeg " alt="copertina brano" />
+                    <i class="fa-regular fa-circle-play centro"></i>
                   </div>
                   <div class="info">
                     <ul>
@@ -167,6 +173,7 @@
                       src="/img/radar.jpeg"
                       alt="copertina released reader"
                     />
+                    <i class="fa-regular fa-circle-play centro"></i>
                   </div>
                   <div class="info">
                     <ul>
@@ -177,6 +184,7 @@
                 <div class="card">
                   <div class="img-wrapper">
                     <img src="/img/mixdaily.jpeg" alt="copertina daily mix" />
+                    <i class="fa-regular fa-circle-play centro"></i>
                   </div>
                   <div class="info">
                     <ul>
@@ -193,6 +201,7 @@
                 <div class="card">
                   <div class="img-wrapper">
                     <img src="/img/youg.jpeg" alt="copertina released reader" />
+                    <i class="fa-regular fa-circle-play centro"></i>
                   </div>
                   <div class="info">
                     <ul>
@@ -203,6 +212,7 @@
                 <div class="card">
                   <div class="img-wrapper">
                     <img src="/img/einaudi.jpeg" alt="copertina daily mix" />
+                    <i class="fa-regular fa-circle-play centro"></i>
                   </div>
                   <div class="info">
                     <ul>
