aggiunte varie migliorie per il responsive nel footer\

--- a/index.html
+++ b/index.html
@@ -233,8 +233,10 @@
             <h5>Sinister</h5>
             <h6>Brano nome</h6>
           </div>
-          <i class="fa-regular fa-heart"></i>
-          <i class="fa-regular fa-folder"></i>
+          <div class="icon">
+            <i class="fa-regular fa-heart"></i>
+            <i class="fa-regular fa-folder"></i>
+          </div>
         </div>
         <div class="music-player">
           <div class="player-controls">
