--- a/index.html
+++ b/index.html
@@ -23,6 +23,9 @@
             <div class="logo">
               <img src="/img/logo.svg" alt="logo Spotify" />
             </div>
+            <div class="logo-small">
+              <img src="/img/logo-small.svg" alt="logo Spotify" />
+            </div>
             <!-- aggiungere stanghetta verde verticale al click -->
 
             <ul>
