trattino verde sui link al passaggio del cursore

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
               <h4>PLAYLIST</h4>
               <ul>
                 <!-- qui devo aggiungere il bottone -->
-                <li>Crea Playlist</li>
+                <li><i class="fa-solid fa-square-plus"></i> Crea Playlist</li>
                 <li>Nome Playlist</li>
                 <li>Nome Playlist</li>
                 <li>Nome Playlist</li>
@@ -79,12 +79,42 @@
             <!-- aggiungere stanghetta verde verticale al click -->
             <div class="nav-bar">
               <ul>
-                <li>IN EVIDENZA</li>
-                <li>PODCAST</li>
-                <li>CLASSIFICHE</li>
-                <li>GENERI E MOOD</li>
-                <li>NUOVE USCITE</li>
-                <li>SCOPRI</li>
+                <li>
+                  <a href="#">
+                    IN EVIDENZA
+                    <span class="green-hover"></span>
+                  </a>
+                </li>
+                <li>
+                  <a href="#">
+                    PODCAST
+                    <span class="green-hover"></span>
+                  </a>
+                </li>
+                <li>
+                  <a href="#">
+                    CLASSIFICHE
+                    <span class="green-hover"></span>
+                  </a>
+                </li>
+                <li>
+                  <a href="#">
+                    GENERI E MOOD
+                    <span class="green-hover"></span>
+                  </a>
+                </li>
+                <li>
+                  <a href="#">
+                    NUOVE USCITE
+                    <span class="green-hover"></span>
+                  </a>
+                </li>
+                <li>
+                  <a href="#">
+                    SCOPRI
+                    <span class="green-hover"></span>
+                  </a>
+                </li>
               </ul>
             </div>
             <div class="recently-played">
