trattino verde anche nella sidebar icone

--- a/index.html
+++ b/index.html
@@ -31,15 +31,24 @@
             <ul>
               <li class="icon-nav">
                 <img src="/img/home.svg" alt="logo home" />
-                <span>Home</span>
+                <a href="#">
+                  Home
+                  <span class="green-hover left"></span>
+                </a>
               </li>
               <li class="icon-nav">
                 <img src="/img/search.svg" alt="logo search" />
-                <span>Cerca</span>
+                <a href="#">
+                  Cerca
+                  <span class="green-hover left"></span>
+                </a>
               </li>
               <li class="icon-nav">
                 <img src="/img/libreria.svg" alt="logo libreria" />
-                <span>La tua libreria</span>
+                <a href="#">
+                  La tua libreria
+                  <span class="green-hover left"></span>
+                </a>
               </li>
             </ul>
 
@@ -82,37 +91,37 @@
                 <li>
                   <a href="#">
                     IN EVIDENZA
-                    <span class="green-hover"></span>
+                    <span class="green-hover bottom"></span>
                   </a>
                 </li>
                 <li>
                   <a href="#">
                     PODCAST
-                    <span class="green-hover"></span>
+                    <span class="green-hover bottom"></span>
                   </a>
                 </li>
                 <li>
                   <a href="#">
                     CLASSIFICHE
-                    <span class="green-hover"></span>
+                    <span class="green-hover bottom"></span>
                   </a>
                 </li>
                 <li>
                   <a href="#">
                     GENERI E MOOD
-                    <span class="green-hover"></span>
+                    <span class="green-hover bottom"></span>
                   </a>
                 </li>
                 <li>
                   <a href="#">
                     NUOVE USCITE
-                    <span class="green-hover"></span>
+                    <span class="green-hover bottom"></span>
                   </a>
                 </li>
                 <li>
                   <a href="#">
                     SCOPRI
-                    <span class="green-hover"></span>
+                    <span class="green-hover bottom"></span>
                   </a>
                 </li>
               </ul>
